message AlStatePushResponse {

    required string userId = 1;
    required string status = 2;
    
}
